# BDSP_ColorVariation_JSONParser

./: README.md  bdsp_colorvariation_jsonparser.py  pyproject.toml
.github/workflows/: build_executable.yml  build_executable_nuitka.yml
images/: BDSP_ColorVariation_JSONParser.tga
src/BDSP_ColorVariation_JSONParser/: bdsp_json.py  general.py  json_parser.py
